2010-06-09  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        WebGL rendering context does not activate unless accelerated
        compositing is enabled from settings.
        https://bugs.webkit.org/show_bug.cgi?id=37772

        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::getContext):

git-svn-id: svn://svn.chromium.org/blink/trunk@60930 bbb929c8-8fbe-4397-9dbb-9b2b20218538